--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.16.2-1) UNRELEASED; urgency=medium
+libinput (1.16.2-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Oct 2020 09:02:25 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 07 Oct 2020 09:16:00 +0300
 
 libinput (1.16.1-1) unstable; urgency=medium
 
