--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.16.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 12 Nov 2020 13:51:10 +0200
+
 libinput (1.16.2-1) unstable; urgency=medium
 
   * New upstream release.
