--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.16.3-1) UNRELEASED; urgency=medium
+libinput (1.16.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Thu, 12 Nov 2020 13:51:10 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 12 Nov 2020 13:56:26 +0200
 
 libinput (1.16.2-1) unstable; urgency=medium
 
