--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libinput (1.16.3-2) UNRELEASED; urgency=medium
+
+  * control, rules: Enable building debug-gui and tests, add check and
+    libgtk-3-dev to build-depends. (Closes: #975528)
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 23 Nov 2020 13:26:30 +0200
+
 libinput (1.16.3-1) unstable; urgency=medium
 
   * New upstream release.
