--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-libinput (1.16.3-2) UNRELEASED; urgency=medium
+libinput (1.16.4-1) UNRELEASED; urgency=medium
 
   * control, rules: Enable building debug-gui and tests, add check and
     libgtk-3-dev to build-depends. (Closes: #975528)
+  * New upstream release.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Mon, 23 Nov 2020 13:26:30 +0200
 
