--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.16.4-2) UNRELEASED; urgency=medium
+
+  * rules: Drop libwacom support from the udeb.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Dec 2020 16:57:08 +0200
+
 libinput (1.16.4-1) unstable; urgency=medium
 
   * control, rules: Enable building debug-gui and tests, add check and
