--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.16.4-2) UNRELEASED; urgency=medium
+libinput (1.16.4-2) unstable; urgency=medium
 
   * rules: Drop libwacom support from the udeb.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Dec 2020 16:57:08 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Dec 2020 17:27:17 +0200
 
 libinput (1.16.4-1) unstable; urgency=medium
 
