--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.16.4-3) UNRELEASED; urgency=medium
+
+  * rules: Fix dh_auto_install to use separate destdir for main/udeb builds.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Dec 2020 18:03:26 +0200
+
 libinput (1.16.4-2) unstable; urgency=medium
 
   * rules: Drop libwacom support from the udeb.
