--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.17.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 May 2021 10:58:55 +0300
+
 libinput (1.16.4-3) unstable; urgency=medium
 
   * rules: Fix dh_auto_install to use separate destdir for main/udeb builds.
