--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libinput (1.17.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Allow to build without the udeb package.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 May 2021 10:58:55 +0300
 
