--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-libinput (1.17.2-1) UNRELEASED; urgency=medium
+libinput (1.17.2-1) experimental; urgency=medium
 
   * New upstream release.
   * Allow to build without the udeb package.
   * Update control build-dep libevdev-dev (>= 1.10.0) for
     libevdev_disable_property API.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 May 2021 10:58:55 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 May 2021 11:43:43 +0300
 
 libinput (1.16.4-3) unstable; urgency=medium
 
