--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.18.1-1) UNRELEASED; urgency=medium
+libinput (1.18.1-1) experimental; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Aug 2021 14:19:29 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Aug 2021 14:23:36 +0300
 
 libinput (1.18.0-1) experimental; urgency=medium
 
