--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.19.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Sep 2021 12:16:43 +0300
+
 libinput (1.18.1-1) experimental; urgency=medium
 
   * New upstream release.
