--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-libinput (1.19.1-1) UNRELEASED; urgency=medium
+libinput (1.19.1-1) unstable; urgency=medium
 
-  * New upstream release.
+  * New upstream release. (Closes: #993733)
   * symbols: Updated.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Sep 2021 12:16:43 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Sep 2021 12:23:05 +0300
 
 libinput (1.18.1-1) experimental; urgency=medium
 
