--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.19.2-1) UNRELEASED; urgency=medium
+libinput (1.19.2-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 27 Oct 2021 10:35:59 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 27 Oct 2021 10:38:27 +0300
 
 libinput (1.19.1-1) unstable; urgency=medium
 
