--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.19.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Fri, 14 Jan 2022 13:23:32 +0200
+
 libinput (1.19.2-1) unstable; urgency=medium
 
   * New upstream release.
