--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.19.3-1) UNRELEASED; urgency=medium
+libinput (1.19.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Fri, 14 Jan 2022 13:23:32 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Fri, 14 Jan 2022 13:24:24 +0200
 
 libinput (1.19.2-1) unstable; urgency=medium
 
