--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.20.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Mon, 21 Feb 2022 10:38:05 +0200
+
 libinput (1.19.3-2) unstable; urgency=medium
 
   * Rebuild against new libwacom.
