--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ libinput (1.22.0-2) UNRELEASED; urgency=medium
 
   * debian/copyright: use spaces rather than tabs to start continuation lines.
   * Use secure URI in Homepage field.
+  * Bump debhelper from old 12 to 13.
+    + debian/rules: Drop --fail-missing argument to dh_missing, which is now the
+      default.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Nov 2022 12:39:22 -0000
 
