--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libinput (1.22.0-2) UNRELEASED; urgency=medium
 
   * debian/copyright: use spaces rather than tabs to start continuation lines.
+  * Use secure URI in Homepage field.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Nov 2022 12:39:22 -0000
 
