--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libinput (1.22.0-2) UNRELEASED; urgency=medium
   * Bump debhelper from old 12 to 13.
     + debian/rules: Drop --fail-missing argument to dh_missing, which is now the
       default.
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository-Browse.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Nov 2022 12:39:22 -0000
 
