--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ libinput (1.22.0-2) UNRELEASED; urgency=medium
       default.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository-Browse.
   * Update standards version to 4.6.1, no changes needed.
+  * Replace use of deprecated $ADTTMP with $AUTOPKGTEST_TMP.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Nov 2022 12:39:22 -0000
 
