--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ libinput (1.22.0-2) UNRELEASED; urgency=medium
     + debian/rules: Drop --fail-missing argument to dh_missing, which is now the
       default.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository-Browse.
+  * Update standards version to 4.6.1, no changes needed.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Nov 2022 12:39:22 -0000
 
